# microfetch

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
.github/workflows/: hotpath-comment.yml  hotpath-profile.yml  rust.yml
crates/alloc/: Cargo.toml
crates/alloc/src/: lib.rs
crates/asm/: Cargo.toml
crates/asm/src/: aarch64.rs  arm.rs  lib.rs  loongarch64.rs  mips.rs  mips64.rs  powerpc.rs  powerpc64.rs  riscv32.rs  riscv64.rs  s390x.rs  sparc.rs  sparc64.rs  x86.rs  x86_64.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: microfetch.rs
crates/lib/: Cargo.toml
crates/lib/src/: colors.rs  cpu.rs  desktop.rs  lib.rs  release.rs  system.rs  uptime.rs
docs/: README.md
microfetch/: Cargo.toml  build.rs
microfetch/src/: main.rs
nix/: package.nix  shell.nix
scripts/: ld-wrapper
src/: lib.rs  main.rs  syscall.rs  system.rs
