[workspace]
members  = [ "crates/*", "microfetch", "crates/benchmarks" ]
resolver = "3"

[workspace.package]
authors      = [ "NotAShelf <raf@notashelf.dev>" ]
edition      = "2024"
license      = "GPL-3.0"
rust-version = "1.92.0"
version      = "1.0.0"

[workspace.dependencies]
microfetch-alloc = { path = "./crates/alloc" }
microfetch-asm   = { path = "./crates/asm" }
microfetch-lib   = { path = "./crates/lib" }

criterion                 = { default-features = false, features = [ "cargo_bench_support" ], version = "0.8.2" }
criterion-cycles-per-byte = "0.8.0"

[profile.dev]
opt-level = 1
panic     = "abort"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true

[profile.profiler]
debug           = true
inherits        = "release"
split-debuginfo = "unpacked"
strip           = "none"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
nursery    = { level = "warn", priority = -1 }
pedantic   = { level = "warn", priority = -1 }
perf       = { level = "warn", priority = -1 }
style      = { level = "warn", priority = -1 }

absolute_paths                 = "allow"
arbitrary_source_item_ordering = "allow"
implicit_return                = "allow"
missing_docs_in_private_items  = "allow"
non_ascii_literal              = "allow"
pattern_type_mismatch          = "allow"
print_stdout                   = "allow"
question_mark_used             = "allow"
similar_names                  = "allow"
single_call_fn                 = "allow"
std_instead_of_core            = "allow"
too_long_first_doc_paragraph   = "allow"
too_many_lines                 = "allow"
unused_trait_names             = "allow"
