[package]
name                   = "microfetch-alloc"
description            = "Simple, std-free bump allocator for Microfetch"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish                = false

[lints]
workspace = true
